--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -15,3 +15,5 @@
     <meta property="og:title" content="{{ page.title }}" />
     <meta property="twitter:title" content="{{ page.title }}" />
     {% endif %}
+
+    <link rel="author" href="https://plus.google.com/113856589579234019597"/>
