--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -23,7 +23,7 @@
       <div class="container">
         <div class="post-heading">
             <h1>{{page.title}}</h1>
-            <span class="meta">Escrito por: <a href="{{ site.baseurl }}/acerca"> {{page.author}}
+            <span class="meta">Escrito por: <a href="{{ site.baseurl }}/"> {{page.author}}
             </a> el {% assign m = page.date | date: "%-m" %}
                 {{ page.date | date: "%-d" }} de 
                   {% case m %}
