sharing funcionality enabled

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,7 @@ layout: blog
   <div class="entry">
     {{ content }}
   </div>
+  {% include share-page.html %}
 
   {% include disqus.html %}
 </article>
