--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -50,3 +50,11 @@ $georgia: Georgia, serif;
     @content;
   }
 }
+
+// Share buttons
+$secondary-color: #303AA6;
+$light-color: $lightGray;
+$spacing-unit: 1;
+$facebook-color: #3B5997;
+$twitter-color: #00ACED;
+$googleplus-color: #D64937;
