--- a/_sass/_jekyll-mono.scss
+++ b/_sass/_jekyll-mono.scss
@@ -325,3 +325,50 @@ button.button-primary:focus {
 	}
 }
 
+.share-page {
+    text-align: center;
+    border-radius: 5px;
+    margin: 1.5 * $spacing-unit 0;
+
+    .button {
+    	border-radius: 3px;
+    	color: #fafafa;
+    	display: inline-block;
+    	font-weight: 400;
+    	white-space: normal;
+    	text-align: center;
+    	text-decoration: none;
+    	margin: 1.5rem 0 0rem 0;
+    	padding: 0 15px;
+    }
+
+    .button-facebook {
+    	background: $facebook-color;
+    }
+
+    .button-twitter {
+    	background: $twitter-color;
+    }
+
+    .button-googleplus {
+    	background: $googleplus-color;
+    }
+
+    .icon {
+    	width: 1.5rem;
+    	height: 1.5rem;
+    	fill: currentColor;
+    }
+
+    a {
+    	margin-right: 6px;
+    	border: 0;
+    	font-size: 90%;
+
+        &:hover {
+            opacity: 0.85;
+            color: $white;
+        }
+    }
+}
+
