--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
                <p class="site-description">{{ site.description }}</p>
              </div>
              <nav>
-               <a href="{{ site.baseurl }}/">Acerca</a>
+               <a href="{{ site.baseurl }}/">Acerca de</a>
                <a href="{{ site.baseurl }}/projects">Proyectos</a>
                <a href="{{ site.baseurl }}/blog">Blog</a>
                <a href="{{ site.baseurl }}/contacto">Contacto</a>
