--- a/_sass/_jekyll-mono.scss
+++ b/_sass/_jekyll-mono.scss
@@ -101,7 +101,7 @@ button.button-primary:focus {
 
 .intro-header .post-heading h1 {
     color:$white;
-    font-size: 36px;
+    font-size: 2.5em;
     line-height: 1.5;
     font-family:$raleway ;
 }
@@ -370,5 +370,19 @@ button.button-primary:focus {
             color: $white;
         }
     }
+}
+
+.aviso, nota, .consejo {
+	border-radius: 0 4px 4px 0;
+	padding: 15px 5px 5px 15px;
+	margin: 2em 0 2em 0;
+	color: #fff;
+	text-shadow: 0px 0px 1px;
+	font-size: 0.9em
+}
+
+.consejo {
+	background-color: #22A7F0;
+	border-left: 1.2em solid #4183D7
 }
 
