--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -11,7 +11,7 @@ $darkerGray: #222;
 $darkGray: #333;
 $gray: #666;
 $lightGray: #eee;
-$lightBlue: #7EB6FF;
+$lightBlue: #ffd27f;
 $white: #fff;
 $blue: #4183C4;
 $green: #45A33F;
@@ -20,7 +20,7 @@ $green: #45A33F;
 // Main theme colors 
 // Some cool main theme colors(violet:#8476ad;blue:#5cacee;red:#ff7373,#ff6f69;green:#6acf64,#2ddbb3;orange:#ffa268)
 
-$mono-color:#303AA6;                // main theme color(header, links, footer icons, buttons, post-title)
+$mono-color:#2B83EE;                // main theme color(header, links, footer icons, buttons, post-title)
 $hl-color: $lightBlue;              // header link color (author name and posted on date) for blog post meta 
 $navbar-hover-color:$white;        // navbar hover color (site name and navbar links hover color)
 $link-color: $darkerGray;        // normal hyperlink color other than the ones above.
