--- a/style.scss
+++ b/style.scss
@@ -33,9 +33,9 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
   color: $darkerGray;
-  font-weight: bold;
+  font-weight: 500;
 
-  line-height: 1.7;
+  line-height: 2;
   margin: 1em 0 15px;
   padding: 0;
 
@@ -53,12 +53,12 @@ h1 {
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 2em;
   color: $h2-color;
 }
 
 h3 {
-  font-size: 20px;
+  font-size: 1.5em;
   color: $h3-color;
 }
 
@@ -68,7 +68,11 @@ h4 {
 }
 
 p {
+  font-size: 1.1em;
   margin: 15px 0;
+  letter-spacing: 0.5px;
+  line-height: 1.7;
+  text-rendering: optimizeLegibility;
 }
 
 a {
