new share design

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -16,4 +16,8 @@
     <meta property="twitter:title" content="{{ page.title }}" />
     {% endif %}
 
+    {% if site.keywords %}
+    <meta name="keywords" content="{{ site.keywords }}">
+    {% endif %}
+
     <link rel="author" href="https://plus.google.com/113856589579234019597"/>
