--- a/_includes/share-page.html
+++ b/_includes/share-page.html
@@ -1,8 +1,7 @@
 <div class="share-page">
-<i class="fa fa-facebook"></i>
-    Compártelo en &rarr;
-    	<a class="button button-facebook" href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Compartir en Facebook"><i class="icon-facebook icon-large"></i></a>
-    	<a class="button button-twitter" href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.twitter_username }}&related={{ site.twitter_username }}" rel="nofollow" target="_blank" title="Compartir en Twitter"><i class="icon-twitter icon-large"></i></a>
-    	
-    	<a class="button button-googleplus" href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Compartir en Google+"><i class="icon-google-plus icon-large"></i></a>
+    <h4>Compártelo en:</h4>
+	<a class="button button-facebook" href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Compartir en Facebook"><i class="icon-facebook-sign icon-large"> <span>facebook</span></i></a>
+	<a class="button button-twitter" href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.twitter_username }}&related={{ site.twitter_username }}" rel="nofollow" target="_blank" title="Compartir en Twitter"><i class="icon-twitter icon-large"> <span>twitter</span></i></a>
+	
+	<a class="button button-googleplus" href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Compartir en Google+"><i class="icon-google-plus icon-large"> <span>google</span></i></a>
 </div>
