--- a/_sass/_jekyll-mono.scss
+++ b/_sass/_jekyll-mono.scss
@@ -326,50 +326,67 @@ button.button-primary:focus {
 }
 
 .share-page {
-    text-align: center;
     border-radius: 5px;
-    margin: 1.5 * $spacing-unit 0;
+    margin: 20px 0px;
+
+    i {
+    	border: none;
+		box-shadow: 0 0 1px #828282;
+		transition: .3s ease-out;
+		-moz-transition: .3s ease-out; /* Firefox 4 */
+    	-webkit-transition: .3s ease-out; /* Safari and Chrome */
+    	-o-transition: .3s ease-out; /* Opera */
+    	ms-transition: .3s ease-out;
+
+		padding: 5px 10px 5px 10px;
+		opacity: 0.9;
+		margin-bottom: 0.3em;
+		font-size: 1.5em;
+
+    }
+    
+	.icon-facebook-sign {
+    	color: $facebook-color;
+
+    	&:hover {
+    		color: white;
+    		background-color: $facebook-color;
+    	}
+    }
+
+    .icon-twitter {
+    	color: $twitter-color;
+
+    	&:hover {
+    		color: white;
+    		background-color: $twitter-color;
+    	}
+
+    }
+
+    .icon-google-plus {
+    	color: $googleplus-color;
+
+    	&:hover {
+    		color: white;
+    		background-color: $googleplus-color;
+    	}
+
+    }
 
     .button {
-    	border-radius: 3px;
-    	color: #fafafa;
-    	display: inline-block;
-    	font-weight: 400;
-    	white-space: normal;
-    	text-align: center;
-    	text-decoration: none;
-    	margin: 1.5rem 0 0rem 0;
-    	padding: 0 15px;
-    }
-
-    .button-facebook {
-    	background: $facebook-color;
-    }
-
-    .button-twitter {
-    	background: $twitter-color;
-    }
-
-    .button-googleplus {
-    	background: $googleplus-color;
-    }
-
-    .icon {
-    	width: 1.5rem;
-    	height: 1.5rem;
-    	fill: currentColor;
+    	border: none;
     }
 
     a {
-    	margin-right: 6px;
-    	border: 0;
-    	font-size: 90%;
-
-        &:hover {
-            opacity: 0.85;
-            color: $white;
-        }
+    	padding: 0px;
     }
+
+    span {
+    	font-family:Helvetica Neue, Helvetica, Arial, sans-serif; 
+    	font-size: 1em;
+    }
+    
 }
 
 .aviso, nota, .consejo {
