--- a/_sass/_jekyll-mono.scss
+++ b/_sass/_jekyll-mono.scss
@@ -403,3 +403,36 @@ button.button-primary:focus {
 	border-left: 1.2em solid #4183D7
 }
 
+
+/*
+	/blog
+*/
+
+.posts {
+	.post {
+		h1 {
+			margin-bottom: 0;
+		}
+	}
+}
+.blog-post-meta {
+	color: #999;
+	list-style: none;
+	padding-left: 0;
+	margin-top: 0;
+
+	.meta-item {
+		display: inline;
+		padding-right: 20px;
+	}
+
+	svg {
+		transform: scale(1.2);
+	}
+}
+
+.octicon {
+	vertical-align: text-bottom;
+	fill: currentColor;
+}
+
