--- a/_sass/_jekyll-mono.scss
+++ b/_sass/_jekyll-mono.scss
@@ -482,10 +482,22 @@ code {
 	font-size: 0.8em;
 }
 
+
+
 .entry {
 	li {
 		font-size: 1.1em;
 		margin-bottom: 5px;
+	}
+
+	p:first-child:first-letter {
+		font-size: 350%;
+		font-weight: bold;
+		float: left;
+		line-height: .8;
+		padding: 0 15px 0;
+		margin-top: 12px;
+		color: $mono-color;
 	}
 }
 
