--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: blog
 <article class="post">
  <div class="space-extra-small"></div>
 
-  <div class="entry">
+  <div class="entry post_in">
     {{ content }}
   </div>
   {% include share-page.html %}
