--- a/_sass/_jekyll-mono.scss
+++ b/_sass/_jekyll-mono.scss
@@ -18,14 +18,10 @@
     }
 }
 
- .post {
-        a {
-         color: $mono-color;
-         &:hover{
-           color: darken($mono-color,20);
-         }
+ /*.post {
+
      }
- }
+ }*/
  
  .post-heading {
         a {
@@ -499,6 +495,23 @@ code {
 		margin-top: 12px;
 		color: $mono-color;
 	}
+
+	a:after {
+		content: " " url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="i-external" viewBox="0 0 32 32" width="18" height="18" fill="none" stroke="rgba(0,0,0,0.7)" stroke-linecap="round" stroke-linejoin="round" stroke-width="7%"><path d="M14 9 L3 9 3 29 23 29 23 18 M18 4 L28 4 28 14 M28 4 L14 18" /></svg>');
+	}
+}
+
+.post_in a {
+	color: rgba(0, 0, 0, 0.7);
+	text-decoration: none;
+	border-bottom: 3px solid #cfcfcf;
+	padding-bottom: 1px;
+	-webkit-transition: 0.4s ease;
+	-moz-transition: 0.4s ease;
+}
+
+.post_in a:hover {
+	border-bottom: 3px solid $mono-color;
 }
 
 /*
